# H100ASMTestBench

./: CMakeLists.txt  README.md  makefile
compare/: CMakeLists.txt  compareb.cu  compareb.hip
complexops/: CMakeLists.txt  cossin_test.cu  custom_asm.hpp  div_test.cu  exp2f_test.cu  pow_test.cu  rcp_test.cu  runcossin.sh  rundiv.sh  runexp2.sh  runexpf.sh  runpowf.sh  runrcp.sh  runroot.sh  sqrtrsq_test.cu  ternary_test.cu  unary_test.cu
convert/: CMakeLists.txt  bf16TOfp32.cu  bf16TOfp32.hip  fp32TObf16.cu  fp32TObf16.hip
demo/: CMakeLists.txt  gpu_demos.cu
include/: OneResult16.hpp  OneResult32.hpp  colors.hpp  cuda_check.hpp  hipcheck.hpp  readbinary.hpp
math/: CMakeLists.txt  cossin_test.cu  cossin_test.hip  div_test.cu  div_test.hip  exp2f_test.cu  exp2f_test.hip  expf_test.cu  expf_test.hip  pow_test.cu  pow_test.hip  rcp_test.cu  rcp_test.hip  runcossin.sh  rundiv.sh  runexp2.sh  runexpf.sh  runpowf.sh  runrcp.sh  runroot.sh  sqrtrsq_test.cu  sqrtrsq_test.hip
torch/: torchbinary.py  torchunary.py
